# FeiTian

./: .gitignore  FeiTian.bat  LICENSE  README.md  ^  feitian_settings.json  pyproject.toml  run.bat
feitian/: __init__.py  __main__.py  app.py  controller_scanner.py  hid_reader.py  server.py
feitian/static/: index.html  style.css
feitian/static/css/: main.css  settings.css
feitian/static/js/: app.js  babylon.gui.js  drone.js  hud.js  input.js  main.js  physics.js  scene.js  settings.js  terrain.js
