[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feitian"
version = "0.1.0"
description = "飞天 — 多旋翼无人机飞行模拟器 | Multi-rotor FPV drone flight simulator in your browser"
readme = "README.md"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "CodeOfMe", email = "codeofme@proton.me"},
]
keywords = ["drone", "simulator", "fpv", "flight", "webgl", "threejs", "multi-rotor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "hidapi>=0.14",
    "websockets>=12.0",
]

[project.optional-dependencies]
hid = ["hidapi>=0.14"]

[project.scripts]
feitian = "feitian.__main__:main"

[project.urls]
Homepage = "https://github.com/CodeOfMe/FeiTian"
Repository = "https://github.com/CodeOfMe/FeiTian"
Issues = "https://github.com/CodeOfMe/FeiTian/issues"

[tool.hatch.build.targets.wheel]
packages = ["feitian"]

[tool.hatch.build.targets.sdist]
include = [
    "feitian/",
    "feitian/static/**",
]
